# excalibreak

./: Cargo.toml
crates/excali_3d/: Cargo.toml
crates/excali_3d/src/: camera.rs  lib.rs  line.wgsl  line_renderer.rs  renderer.rs  shader.wgsl  transform.rs
crates/excali_input/: Cargo.toml
crates/excali_input/src/: lib.rs
crates/excali_io/: Cargo.toml
crates/excali_io/src/: lib.rs
crates/excali_render/: Cargo.toml
crates/excali_render/src/: lib.rs
crates/excali_sprite/: Cargo.toml
crates/excali_sprite/src/: lib.rs  sprite.wgsl
crates/excali_ui/: Cargo.toml
crates/excali_ui/src/: lib.rs
crates/magibreak/: Cargo.toml  TODO.md  \  first.cap
crates/magibreak/assets/: map.toml
crates/magibreak/assets/levels/: 1-0.toml  1-1.toml  alpha-blocking.toml  alpha-double.toml  alpha-x.toml  alpha.toml  cross-octogon.toml  delta-2.toml  delta-3.toml  delta-diamond.toml  delta-inner.toml  delta-intro.toml  delta-sigma.toml  delta.toml  diamond.toml  draft.toml  draft2.toml  intro_0.toml  intro_1.toml  octo-diamond-link.toml  octogon+sigma.toml  octogon.toml  opposite-flows.toml  phi-ball-pass.toml  phi-cross.toml  phi-untie.toml  phi.toml  second-base.toml  sigma.toml  sigma_0.toml  sigma_1.toml
crates/magibreak/src/: input.rs  level_editor.rs  main.rs  puzzle.rs  textures.rs  world.rs
crates/magibreak/src/map/: grid.rs  map.wgsl  mod.rs  model.rs
