[package]
name = "excali_3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
excali_render = { version = "0.1.0", path = "../excali_render" }
bytemuck = { version = "1.13", features = ["derive"] }
nalgebra = "0.32.2"
