[package]
name = "magibreak"
edition = "2021"
version = "0.1.0"

[dependencies]
env_logger = "0.10.0"
gcd = "2.3.0"
log = "0.4.17"
toml = "0.7.2"
wgpu = "0.15.1"
winit = "0.28.1"
excali_io = { version = "0.1.0", path = "../excali_io" }
bytemuck = { verstion = "1.13.0", features = ["derive"] }
excali_3d = { version = "0.1.0", path = "../excali_3d" }
perlin_noise = "1.0.1"

[dependencies.excali_input]
version = "0.1.0"
path = "../excali_input"
features = []

[dependencies.excali_render]
version = "0.1.0"
path = "../excali_render"
features = []

[dependencies.excali_sprite]
version = "0.1.0"
path = "../excali_sprite"
features = []

[dependencies.excali_ui]
version = "0.1.0"
path = "../excali_ui"
features = []

[dependencies.nalgebra]
version = "0.32.1"
features = ["serde-serialize", "std"]
default-features = false

[dependencies.serde]
version = "1.0.152"
features = ["derive"]
